# ChangeLog for net-analyzer/ettercap
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.152 2014/10/18 13:58:39 ago Exp $

*ettercap-0.8.1 (18 Oct 2014)

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> +ettercap-0.8.1.ebuild:
  Version bump to 0.8.1 wrt bug #525580

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0-r1.ebuild:
  Fix compilation on ppc, thanks to upstream author Gianfranco Costamagna, wrt
  to bug #502226 by Paul Osmialowski

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> ettercap-9999.ebuild:
  Sync the last edit with the 9999

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> -ettercap-0.7.5.3.ebuild,
  -ettercap-0.7.6.ebuild, -ettercap-0.8.0.ebuild:
  Remove old

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0-r1.ebuild:
  Stable for arm, wrt bug #487128

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0-r1.ebuild:
  Stable for x86, wrt bug #487128

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0-r1.ebuild:
  Stable for sparc, wrt bug #487128

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0-r1.ebuild:
  Stable for ppc, wrt bug #487128

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0-r1.ebuild:
  Stable for alpha, wrt bug #487128

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0-r1.ebuild:
  Stable for ppc64, wrt bug #487128

  27 Nov 2013; Markus Meier <maekke@gentoo.org> ettercap-0.8.0.ebuild:
  arm stable, bug #487128

  29 Oct 2013; Tony Vroon <chainsaw@gentoo.org> ettercap-0.8.0-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani in bug #487128.

*ettercap-0.8.0-r1 (25 Oct 2013)

  25 Oct 2013; Agostino Sarubbo <ago@gentoo.org> +ettercap-0.8.0-r1.ebuild:
  Force SSL to on because the entire package, now is based on it; wrt to bug
  #489226
