@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-libs/libbsd dev-libs/libpcre dev-libs/openssl net-libs/libnet:1.1 >=net-libs/libpcap-0.8.1 sys-libs/zlib gtk? ( >=dev-libs/atk-1.2.4 >=dev-libs/glib-2.2.2:2 media-libs/freetype x11-libs/cairo x11-libs/gdk-pixbuf:2 >=x11-libs/gtk+-2.2.2:2 >=x11-libs/pango-1.2.3 ) ncurses? ( >=sys-libs/ncurses-5.3 ) plugins? ( >=net-misc/curl-7.26.0 sys-devel/libtool ) sys-devel/flex virtual/yacc sys-devel/make >=dev-util/cmake-2.8 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=A suite for man in the middle attacks
+EAPI=5
+HOMEPAGE=https://github.com/Ettercap/ettercap
+IUSE=gtk ipv6 ncurses +plugins
+KEYWORDS=~alpha ~amd64 ~arm ~sparc ~x86 ~x86-fbsd
+LICENSE=GPL-2+
+RDEPEND=dev-libs/libbsd dev-libs/libpcre dev-libs/openssl net-libs/libnet:1.1 >=net-libs/libpcap-0.8.1 sys-libs/zlib gtk? ( >=dev-libs/atk-1.2.4 >=dev-libs/glib-2.2.2:2 media-libs/freetype x11-libs/cairo x11-libs/gdk-pixbuf:2 >=x11-libs/gtk+-2.2.2:2 >=x11-libs/pango-1.2.3 ) ncurses? ( >=sys-libs/ncurses-5.3 ) plugins? ( >=net-misc/curl-7.26.0 sys-devel/libtool )
+SLOT=0
+SRC_URI=https://github.com/Ettercap/ettercap/archive/v0.8.1.tar.gz -> ettercap-0.8.1.tar.gz
+_eclasses_=cmake-utils	e2cc76ea65ae78da8e4696dad93f5d29	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=8abc543ef464bb38c3e0b1dc70023955
