@@ -1,27 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST ettercap-0.8.0.tar.gz 7069131 SHA256 8013e2bbfc69af2939d8a40e6b31de5016fe75401e4b73207a0a8ac9053ac9bc SHA512 6d32b229378af5aea1dc82537f84a36c557021a01ccf40f228e69f6e39baa3f3becbb6138417bcad2951811d9ea57e89f960f7bb132fc09502e0b08f7a4ca813 WHIRLPOOL 87fc8ffbfa8ebe67b382888b2b9e5aa5ef9059bc5c46c52628e13f62bb4f519362834d865ec4e51ed5b3db7de5832dc0756a708768dc040dd6aa0264db2f474b
 DIST ettercap-0.8.1.tar.gz 7903301 SHA256 d9e39e8f76eebc7fcfd8580dc909632328cd34f336a4486f463d08a967712db2 SHA512 8985eac4cb35f85faf85d98940c9169be21beac47ac92a5e6db12ced1749f3a65b2b985edd23d8a9bdb0580bae26ec788ffd9373c5dbab518ad32c7216954f97 WHIRLPOOL 63ad24c542b16660c0ac34e79bf7dea0380d73c3709f0cf38bd34edde560a06fb39ea4f493ba69306f6f08cf3e3ef82a81fcfa0c550d789e9dc1db26a6f18cb8
 EBUILD ettercap-0.8.0-r1.ebuild 1465 SHA256 43768193d7ae8814486460666dd537125ac47136839f090e8ea251ca7509f2e5 SHA512 ea2b794fb0fc20b8379e47948b04403a177165ada084c5cdaa2ee3dcbf40424969644a81cda20b9d9a597dbd65e720f9469d00f7a7247ee138586776a23c5bcf WHIRLPOOL 63106b39c6e37c274777a04c1fa49cff6dc5f49fc0aadba5f1bf8772c5e44ee1813fb864a9c72f85add326ff8cff88bb0a5ebb5e67a953e5aff6bea803ab8f81
+EBUILD ettercap-0.8.1-r1.ebuild 2050 SHA256 5f6d36586baf077be34ae5609e7d9dafaf190cb56bce22b195c6433a0819b2f5 SHA512 68a7d8aaf9173b42ecb09e41201ee90384b503fb371cba8cd46c9cdf2e3bd3d12aa15fe92131f2ff72bbffbabfe78902ac464fbe66b53b0b1c52c80bcd8142b8 WHIRLPOOL b759f95ea27e8782b71d23aa7ac0f836ed5922cf92079f3b370ac24c81c71c7bda5ec46cca57367f60aeef3783be517743669ae7a88d683e9f9007ea765a4fce
 EBUILD ettercap-0.8.1.ebuild 1406 SHA256 7b6b51ec0d6c3bd7a2f15b1d70d8933c19219379943ca610a6693cef7f0b6c95 SHA512 5f2151d552642c8139dc8039d1a44599e6496a824ff76ee39f38bc2057b6ce6d3c5e1441cc35b97ec0f810233c3edfec67a99685d6044584d883eda845e84392 WHIRLPOOL 00c8af928ef7a48f62679647ee27ed49505c8abad63549bc0f8649c89d4cb7ccd3438ba8c40488f02fccc1b6f77a8522b2bef149eaadbabf155e9465c44a2d75
 EBUILD ettercap-9999.ebuild 1342 SHA256 9a4c0bc3681db1b8d43ae7814977c25af8b2ac90ae7b030e2cf22111642396a1 SHA512 c151cc110e6233f9886391d4b46b11b6d0040ff161e3487bea09651ae1e5556bfaefdc2fdec22981e0d84534ea97685c7de05c6ace04ee1dafad56f4b03149b4 WHIRLPOOL e14522be4813afa8dac27071138f4f7f8c84fa9e0a8e53220193da95dcaf587e14f2d67f8380f3ad92d85934b42f92eb4c573a672021a1cdd49c90ceb5d78900
-MISC ChangeLog 20369 SHA256 10875acb1bf31c91b67551dfd8e3f82fea142b6cbc92fd778472c693bde3b9ec SHA512 9194b2871835fd0cd10b2fbe560687b1f0888ca4ead8141fe604406103066eba0c32d8eacc1770b07374ccccfb99ead21760fe9a9fbd4770fa06a53046c1312b WHIRLPOOL d6374911dd3d1bc217be6f32355115ef15da61d3ff308293b181ea96d2d76104af8f1ac3bd630e6b2b58a4607d730e37c6daeee98d7e221762624ee41bf74415
+MISC ChangeLog 20755 SHA256 cf97aa55446230801a16236dadba53a7a2ac01f22404af2fa684def1e0c5ca74 SHA512 ae7c65df6c30771d756de184f8ce12a2614be657f5148e7d229d1ebee64f225fe4eafe150874099373f8b71f2ca95e55b64b9fbc15d21e271e9a5d3bde46d80c WHIRLPOOL 09b6b6783f8bf13dc64867d16f9b336d2ef3c66777a86626701a2ae6599beb5af0ce3f1e885007ebf882e899d3d19186f0c63070cd7af56df184353e9f676e21
 MISC metadata.xml 427 SHA256 df1df8dc55dfb15c332c0938d2f83c895064ee666f794954f94b65316e887b7e SHA512 b60f7bbcca835cccbd88128a4a15c08735b8cf0c454b4c6641c5c884d014f476daaf518758ce5f33882641681e3305090c7770cec3a14c73c59fbc97ba65b078 WHIRLPOOL 3f07037b068ca3ead4d9fcc0fd790a6b6896d6fd045798c0cdaa02ee66e05ce9d506f5b87c3625141d79ee3d388ff7ec033e4a863e17271f5e971a7b6c3eb5d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUQnIQAAoJELp701BxlEWfcUEP/Ajvm9b8oNimr831VPcJQb4z
-0biRxL6eKot/JyrHfZco17qOu9L8Hf/qNx9NHORE+qJZsU4hIsCouXrycaUypX55
-ZTe8dWfcNJKpJhaPwAp4mhw6ZaJnuCmqnlYb8q8t6XXrcWl85tJRE1zX+DlMTSCK
-33xiOdvjlJR9mtUzMWIOGnuBWXugvofDdjpc5tpxwefLo0EDsC6as3WMxtljm/NV
-sbECrDs241E8yCH5UwZGjQHsK8mOiW70UvOv5tCwMlvrc1HgpkLUFapJewegA5jl
-3cV87loZZ/YM+cuWkBqLD0M+86wT0nYhC7Cyp/qkXatm28pUy37RKf2odW/PqZIB
-xcPfP2Dop14syEgTO8mjHPwlDmUZYGt8LyvU278vsYYy+GyMs6Rf/k/L+2enoIS8
-4xM9TAPiq829zKBLPF8FCfH58NjW+dH79WATzo22tXwBIDSmvgfBsk0nLbeILtrm
-n4bwmBaDTsPSu+/mhNau7GdcDTQwFV4Ak1nIxR08b7CnoCtjT3ja6JCsJjDexia8
-iKUv6M30V5z+IwB/YfKNYjy+hLr33MBuJaW+bBiK04HsO77Io/6jaO5h0bLOfWQR
-tn16V2EL/rxOMUOdDL+kLt5pG7LsQkq5cDAPF6zHeqR7hLb4y/wROU+qd/X+vQyj
-TZROApxE9Z4wxMD07u3p
-=l8Iv
+iQIcBAEBCgAGBQJUVanEAAoJEKXdFCfdEflKizwQAIf+b17I7Iim/uQnbGBeLVRW
+PJIatSbwZMHkQ82Nq4xB/IS6TqJuxkhWpdvxc0EF+1ufqYpedNqRnxDVsFTQrl72
+DcwXgE3GSOHah8o5NOZtmxctJXKfgT6StUVw1VT/qRYnfMiTFAS35IrtBzb+bLid
+5xD0MOp5/fYBPaAIDx9cxDPZtPffctwYsuka2MQKBnBw6Sm9HKRGA3Bdm8hX0Hx8
+TjK5/MpIsE+mx8lI7VjJKE38II53O08HZuBskrfIghf8ROtPKS2W6yx5HqAZmyjc
+Fw4/PQcHl8v1g5PMqnYqT3E9e666WPRCsCpJqn0blP4heve4g5rVIhX5Dyf0W2a6
+aSiLntdyo9GRbHLvRVvO5yT0dZmPjSsjREUWBUYxUAicrUBYMnVv9y9AxaW1W0Wo
+ECx5kU2YKHMNFLr0DXfFnbp+Id2NOHekqmBxVFYwdR4TkJUC5TVohSn8lNpALsi3
+x7gbzstc6YFwyqj4Hb/dTe9QdzMk6m+pJ9J6Eq6UWCIHHYbcbVbkzRxgfpXUmHkp
+creLU8oxnAkoRMqgKz/iMU7V3ePj9yurJ4caeEeOuaTvHo6BA56xmdk1vYaxJ0i1
+R7hn7nrDNnpUgqUtXA1PjxGwJTajTPKDaGnjS67AdT6X400Kje/MT3t97cocJqGP
+dKbOojH6DnRlcFDeSY96
+=n3Oz
 -----END PGP SIGNATURE-----
