@@ -3,18 +3,16 @@ Hash: SHA256
 
 DIST Glances-2.0.1.tar.gz 3281886 SHA256 5f293ab2993f80692b6cd07b080dc8e79b80cfe66c2d59e094589766106a7d70 SHA512 d974f2e6815bedff56902be500333114255c6a05f587b6de141889ce6c6af41d4e7f6b995f759a75cb99817985806c8d434e254c0d095513532e018258ff5435 WHIRLPOOL a4b63d7e1b93b4adcf2b9b28255f266e0c2b9ea1748b36f5dbb6fba60d51bbc563bbd37a84c2ccda1b2d131e9f7f6314f3d7568c5898b8ce506933add65cdf3c
 DIST Glances-2.0.tar.gz 1673386 SHA256 b573e7ed31e8646c5f588c37eda8f9f186e4c1cfd09074bec20dd991dd638a02 SHA512 2c6e00a42344f2611f5e231a8eac3b97cebb523e3ac037612c08f760d5d974dcc673f81a00e1fdfbd16867c488717ad9545fdc52707ebb1979cd575c484e688d WHIRLPOOL ffa72ad83a72c20ed32d0f04bd6036ccb9d16cee0a9a744400b42faef5499e82e440367e455071c1b5f9435f78db55bcef3de4f0ef239937a0e1de099902080f
-DIST Glances-2.1.1.tar.gz 3442571 SHA256 4a744ff0f8a89d6cf923d216a12f8e78efeda70dadf9eb15ab88e933d6d082fb SHA512 a3a137c578ac9f1ad63a059def2bf456e4ab80b0415b8c7bf4eb13afb845c85632ef9fdc4c6f25dbc6af1fbbed068145b6c1e506056ce69106c30fcd684aa77c WHIRLPOOL d97f45c1167ec71b3827d2be163e1bd7699c19f7458d4c81591c52f2fe297e85fc76b170c06d965b7bcbfc50d8220d6cdf3038479007c03c7241dd6be9509995
-DIST Glances-2.1.tar.gz 3442211 SHA256 86cfcb9d3976940b6cc68046d47b8c3fe7fc19a39747fbceca8cfe55d0f1cb32 SHA512 6e8325903ad989e812c3287b3e807c25a8e696bb176043c8fc97ba14f730252979e1d22f39dcbc401dc4d3e46087068b0b34211be3a24601b45d6baa3e2cdb10 WHIRLPOOL 1261dfc561fb1b105e64653065c037be0cab7dcdf77af9c3ff22f09afb10df0cbf5e0c51180e55120a14e6381a27330962edbea27ab878a8a06b3a88c30bb27f
+DIST Glances-2.1.2.tar.gz 3442688 SHA256 dfcd980240e6781c1ce717f820a2e57477e5a65b361844572cdd7761d2da434f SHA512 0fd9de4764286eeae389678047028e0329a6e222b41b9addff18e5038a85b1b3a8b87af218b0d35b22b755545a6197b6fbb0515a0697202d688eec988d0f6b77 WHIRLPOOL 66fd12aae684bcff6d030e0afd74c01d67710785e3e85986a503d74c725e53384ca849d15d8ebd011be90db6f5fb8c4f86d0d13aa804b1cfda25a2c590a2b278
 EBUILD glances-2.0.1.ebuild 1795 SHA256 6850669f63d4d62b316cfa18ac77efc14a6e7122c0bddc5457bfab9e9efd6c99 SHA512 5ad51cde7b071eea800713f3ddafa3ff26a3045b8456f93d03d9ebefa7818decacf3f3d19dce8eb119675628fa48596072633281a144a7305ffd484eaccde46b WHIRLPOOL aa27afb04b8b7ece988a218cc60083c29c18e9b82966c64f432d8311c3e4e546f07e65cf4014d74eccde227586cb305998e8db781729991f1697a2060a1524c3
 EBUILD glances-2.0.ebuild 1793 SHA256 eea399a0280997d9bd32175e33075b8674cd994e702ac4404f20332b8f2659c8 SHA512 97c2c2682c1bbe508ff3b5bad138d9b39666b7c0e3986c139eaadd4f8d6ea0acc36218376708970e9966fd5b2d436d7b1e92e6ca262c08fa8aeac81a0ead580c WHIRLPOOL 06990f01c07001eaf63b422253c8ffdfa4acd9952e4bfed9749c2aa9356ad24172d81551b465e40f2299986920d135ad77e0cb420a69183b3ce477d830bbc72e
-EBUILD glances-2.1.1.ebuild 1904 SHA256 786ea047580db7d654574b9340be9d20fbb09fe48be4873928d391ca8334cdcb SHA512 e6cbdd9d8f8928415438a10321ba67a3376b805d48b25f6a76ceaf08d7b4bae44f73335423f9a8f16b9f13d5c2915bc73ad0103814098505496fa5f3d76f7799 WHIRLPOOL d227e0663cdb2ac82a235ce6cf8653d3b10f4f27c41540552a8f3640480c5c7b2e550d552b8d55ceef0f8b90cc21fee2696a42c671980430d2b47850835de7c9
-EBUILD glances-2.1.ebuild 1847 SHA256 7560c700f481f9829c0381f1f3ded540f09fba00efec859c7fd013adbd8fb6cf SHA512 896eef6cd565e5f98fa4ac16b6b998965332a516e1745bd59ac2dadfd7e4ebcca40c4133222c5353da3222250da600808611186b3bc31ac6fa664988aa7c66d6 WHIRLPOOL 3838bb8d086c0162d8136ce108087d9832b8652e99bac05e7a873f5ee90be0c52005a9259c7123ba799846c951d99d83045cfe870d46b572bfd26b20216bdb35
-MISC ChangeLog 3661 SHA256 dcdf0c46065cef13828144207959d106392fc47ffd5d6d8bf1d323258f4f6ea2 SHA512 39304cad5d58e900be7cff93f72f46b12d91bee7aa7b81128503aad091ace17b5ded7c196bee695b72dfcb116741503bc006e7d7beffa7af0327ab0fa2238d36 WHIRLPOOL 9b04ca5a893c1275df93fff3f03c748d424655a59700c8e4e8475febfafe6d37ec503278b315b1d813d8ea4c6a488ea4dfae7101b7e243c0dc84f16e27b8ef77
+EBUILD glances-2.1.2.ebuild 1904 SHA256 fb3cbf2bae715fe3817662f3f516db334d9dc2f60bdbbdae8cc487452682b0b0 SHA512 2556ba436b22d9dcee5bf3bcc419c0570a46241ceca946ee3ea9a5bfb77f4b0954024d92eb1e0f67d05e06229f84b657834796a70d5c9d58a11f779ab8dd5198 WHIRLPOOL 9511e9ccd3190bc5f91e646f57b06547bc428f0a53f89b9e59581dcdd8a33607a9301c94f12edba9991c72713c30ff8af8169f7b427318ad4a4bea7619f605e4
+MISC ChangeLog 3824 SHA256 a28814c58b6adc06e35f5a2eae696e0f3c314e4c1ea0a6229ef0caac627b44b4 SHA512 057aceb253dfec925dae909792e32966d66314515344809aeabdb294a6b6922065d302c97426dd395deab1b27c6b77abce79920cb452bcee6e64da89e05071a9 WHIRLPOOL 13f4da6ca96eb5add65c7f9717a1ce148a257344a4ce1a2e2d02927ff42c46a916e65253ca3989c300ca8111a93b6278c7a4c3e70d0f33fb4f5aa06fd8ec986f
 MISC metadata.xml 608 SHA256 c4d8c2241d9c29f2bfee8b1f8d64d6d724c5ebb5e007c00a1693e03d26adfb38 SHA512 e8a01152562413532395dbce0d9a1eb95ad9214dad57906e7edaf66cc2ac48771ec8eeac7a186572a339c6da73e90bc6ebd4d83fa1481ac169a32f744aaed881 WHIRLPOOL 7f585beb5ac82900e8e8a00f535401499f8dd1aed474c69331069dd988e67e7a39a41159715431389b6fa8a58ec0d861b574b25e88bfcc8fea7974842980bea2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlQ3+gUACgkQso7CE7gHKw2pugCg3oTw7kkSSlRl8vmqBAYnuBzq
-gBYAnR8b7Qhj7GHvDZEv0eEU6oFDgxCj
-=2p4v
+iEYEAREIAAYFAlRVrCcACgkQso7CE7gHKw24PQCfQcsJvtk9e7wyO+EMVG/GWeKD
+Pc0AoKsj60O2ntYAJyEqtziV9G1bfDwA
+=feBS
 -----END PGP SIGNATURE-----
