@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/glances-2.1.1.ebuild,v 1.1 2014/10/10 15:23:31 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/glances-2.1.2.ebuild,v 1.1 2014/11/02 03:59:20 idella4 Exp $
 
 EAPI=5
 
