@@ -1,6 +1,12 @@
 # ChangeLog for sys-process/glances
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.21 2014/10/10 15:23:31 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.22 2014/11/02 03:59:20 idella4 Exp $
+
+*glances-2.1.2 (02 Nov 2014)
+
+  02 Nov 2014; Ian Delaney <idella4@gentoo.org> +glances-2.1.2.ebuild,
+  -glances-2.1.1.ebuild, -glances-2.1.ebuild:
+  bump; rm old
 
 *glances-2.1.1 (10 Oct 2014)
 
