@@ -1,6 +1,16 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.152 2014/10/18 13:58:39 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.154 2014/11/02 03:46:45 zerochaos Exp $
+
+  02 Nov 2014; Rick Farina <zerochaos@gentoo.org> ettercap-0.8.1-r1.ebuild:
+  adding misc maintainer note to ebuild, super bad form but otherwise it will be
+  forgotten
+
+*ettercap-0.8.1-r1 (02 Nov 2014)
+
+  02 Nov 2014; Rick Farina <zerochaos@gentoo.org> +ettercap-0.8.1-r1.ebuild:
+  fix for optional pdf dep, bug #527646, disable building of pdfs that don't
+  even get installed
 
 *ettercap-0.8.1 (18 Oct 2014)
 
